  now also correct for all supported platforms.
* Removed `termios` dependency in favor of `nix`. This is a big step towards
  supporting additional platforms.

==== Fixed
* Stop bits are now specified properly (had been reversed). Thanks to
  @serviushack (MR#9)
* `TTYPort::pair()` is now thread-safe.
* `TTYPort::open()` no longer leaks file descriptors if it errors. Thanks to
  @daniel (MR#12)

=== [1.0.1] - 2017-02-20
==== Fixed
* `read()` now properly blocks for at least one character
* Compilation now works on Mac

=== [1.0.0] - 2017-02-13
==== Changed
* Various documentation/README updates
* Minor formatting fixes (from rustfmt)

==== Fixed
* Platform-specific examples are now only built on appropriate platforms

=== [0.9.0] - 2017-02-09
==== Added
* `impl Debug` for `COMPort`
* `exclusive()` and `set_exclusive()` for `TTYPort`
* `port_name()` for `SerialPort`
* `impl FromRawFd` and `impl IntoRawFd` for `TTYPort`
* `pair()` for `TTYPort`

=== [0.3.0] - 2017-01-28
==== Added
* `open_with_settings()` to support initializing the port with custom settings
* `SerialPortSettings` is now publically usable being exported in the prelude,
  having all public and commented fields, and a `Default` impl.

==== Changed
* `TTYPort/COMPort::open()` now take a `SerialPortSettings` argument and return
  concrete types
* `serialport::open()` now initializes the port to reasonable defaults
* Removed all instances of `try!()` for `?`
* `SerialPort::set_all()` now borrows `SerialPortSettings`

=== [0.2.4] - 2017-01-26
==== Added
* Report an Unimplemented error for unsupported unix targets

==== Changed
* Minor changes suggested by Clippy
* Reworked Cargo.toml to more easily support additional targets

==== Fixed
* AppVeyor badge should now be properly displayed

=== [0.2.3] - 2017-01-21
==== Added
* Specify AppVeyor build status badge for crates.io

=== [0.2.2] - 2017-01-21
* No changes, purely a version increment to push new crate metadata to crates.io

=== [0.2.1] - 2017-01-21