@@ -32,6 +32,7 @@ and this project adheres to http://semver.org/[Semantic Versioning].
 * `TTYPort::pair()` is now thread-safe.
 * `TTYPort::open()` no longer leaks file descriptors if it errors. Thanks to
   @daniel (MR#12)
+* Fixed compilation when targeting Android
 
 === [1.0.1] - 2017-02-20
 ==== Fixed
